--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,10 @@
 name = "SimpleWeave"
 uuid = "f4131ab4-dd35-4b58-abd1-8879dd993ef2"
-authors = ["Julius Krumbiegel <julius.krumbiegel@gmail.com> and contributors"]
+authors = ["Julius Krumbiegel <julius.krumbiegel@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 
 [compat]
 julia = "1"
